--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -139,6 +139,9 @@
     <Compile Include="Views\PlottingGraph.xaml.cs">
       <DependentUpon>PlottingGraph.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\SettingsView.xaml.cs">
+      <DependentUpon>SettingsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\TruthTableControl.xaml.cs">
       <DependentUpon>TruthTableControl.xaml</DependentUpon>
     </Compile>
@@ -187,6 +190,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PlottingGraph.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
