--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -94,6 +94,15 @@
             <setting name="FuncWindowHeight" serializeAs="String">
                 <value>280</value>
             </setting>
+            <setting name="RememberSizeAndPosition" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="RememberRightToolBar" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="RememberBaseAndAngle" serializeAs="String">
+                <value>True</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
