--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -118,6 +118,9 @@
     <Compile Include="Views\AboutView.xaml.cs">
       <DependentUpon>AboutView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\AddFunctionView.xaml.cs">
+      <DependentUpon>AddFunctionView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\AddVariableView.xaml.cs">
       <DependentUpon>AddVariableView.xaml</DependentUpon>
     </Compile>
@@ -171,6 +174,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\AboutView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AddFunctionView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
