--- a/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
@@ -105,6 +105,7 @@
     <Compile Include="Expressions\Maths\BinaryTest.cs" />
     <Compile Include="Expressions\Maths\UnaryTest.cs" />
     <Compile Include="Expressions\Maths\SumTest.cs" />
+    <Compile Include="Expressions\Maths\ProductTest.cs" />
     <Compile Include="Expressions\Maths\UserFunctionTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathLexerMock.cs" />
