--- a/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
@@ -58,7 +58,9 @@
     <Compile Include="Expressions\MathParameter.cs" />
     <Compile Include="Expressions\MathParameterIsReadOnlyException.cs" />
     <Compile Include="Expressions\MathParameterType.cs" />
+    <Compile Include="Expressions\Product.cs" />
     <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
+    <Compile Include="Expressions\Sum.cs" />
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="EnumerableExtention.cs" />
     <Compile Include="ISimplifier.cs" />
