--- a/xFunc.Maths/xFunc.Maths (.Net 4.5.1).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 4.5.1).csproj
@@ -63,8 +63,10 @@
     <Compile Include="Expressions\MathParameter.cs" />
     <Compile Include="Expressions\MathParameterIsReadOnlyException.cs" />
     <Compile Include="Expressions\MathParameterType.cs" />
+    <Compile Include="Expressions\Product.cs" />
     <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
     <Compile Include="Expressions\Simplify.cs" />
+    <Compile Include="Expressions\Sum.cs" />
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="ISimplifier.cs" />
     <Compile Include="MathDifferentiator.cs" />
