--- a/xFunc.Maths/xFunc.Maths (Portable).csproj
+++ b/xFunc.Maths/xFunc.Maths (Portable).csproj
@@ -120,6 +120,8 @@
     <Compile Include="Expressions\MathParameterIsReadOnlyException.cs" />
     <Compile Include="Expressions\MathParameterType.cs" />
     <Compile Include="Expressions\MathParameterCollection.cs" />
+    <Compile Include="Expressions\Product.cs" />
+    <Compile Include="Expressions\Sum.cs" />
     <Compile Include="Expressions\Mul.cs" />
     <Compile Include="Expressions\Number.cs" />
     <Compile Include="Expressions\Pow.cs" />
