--- a/xFunc.Maths/xFunc.Maths (.Net 3.5).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.5).csproj
@@ -180,7 +180,12 @@
     <None Include="..\key.pfx">
       <Link>key.pfx</Link>
     </None>
-    <None Include="LICENSE">
+    <None Include="..\LICENSE">
+      <Link>LICENSE</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="..\NOTICE">
+      <Link>NOTICE</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
