--- a/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
@@ -115,6 +115,7 @@
     <Compile Include="MathLexerTest.cs" />
     <Compile Include="LogicLexerTest.cs" />
     <Compile Include="SimplifierTest.cs" />
+    <Compile Include="MathParameterCollectionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xFunc.Logics\xFunc.Logics %28.Net 4.0%29.csproj">
