--- a/xFunc.Test/xFunc.Tests (.Net 4.5).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 4.5).csproj
@@ -114,6 +114,7 @@
     <Compile Include="MathLexerTest.cs" />
     <Compile Include="LogicLexerTest.cs" />
     <Compile Include="SimplifierTest.cs" />
+    <Compile Include="MathParameterCollectionTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xFunc.Logics\xFunc.Logics %28.Net 4.5%29.csproj">
