--- a/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
@@ -58,6 +58,7 @@
     <Compile Include="Expressions\MathParameter.cs" />
     <Compile Include="Expressions\MathParameterIsReadOnlyException.cs" />
     <Compile Include="Expressions\MathParameterType.cs" />
+    <Compile Include="Expressions\Matrix.cs" />
     <Compile Include="Expressions\Product.cs" />
     <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
     <Compile Include="Expressions\Simplify.cs" />
