Moved collections to new namespace.

--- a/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
@@ -55,9 +55,9 @@
     <Compile Include="Expressions\GCD.cs" />
     <Compile Include="Expressions\Hyperbolic\HyperbolicMathExpression.cs" />
     <Compile Include="Expressions\LCM.cs" />
-    <Compile Include="Expressions\MathParameter.cs" />
-    <Compile Include="Expressions\MathParameterIsReadOnlyException.cs" />
-    <Compile Include="Expressions\MathParameterType.cs" />
+    <Compile Include="Expressions\Collections\MathParameter.cs" />
+    <Compile Include="Expressions\Collections\MathParameterIsReadOnlyException.cs" />
+    <Compile Include="Expressions\Collections\MathParameterType.cs" />
     <Compile Include="Expressions\Matrices\Matrix.cs" />
     <Compile Include="Expressions\Matrices\MatrixIsInvalidException.cs" />
     <Compile Include="Expressions\Matrices\Vector.cs" />
@@ -79,7 +79,7 @@
     <Compile Include="Expressions\Bitwise\XOr.cs" />
     <Compile Include="Expressions\Bitwise\Or.cs" />
     <Compile Include="Expressions\Bitwise\Not.cs" />
-    <Compile Include="Expressions\MathFunctionCollection.cs" />
+    <Compile Include="Expressions\Collections\MathFunctionCollection.cs" />
     <Compile Include="Expressions\Trigonometric\Arccos.cs" />
     <Compile Include="Expressions\Trigonometric\Arccot.cs" />
     <Compile Include="Expressions\Trigonometric\Arccsc.cs" />
@@ -111,7 +111,7 @@
     <Compile Include="Expressions\Lg.cs" />
     <Compile Include="Expressions\Ln.cs" />
     <Compile Include="Expressions\Log.cs" />
-    <Compile Include="Expressions\MathParameterCollection.cs" />
+    <Compile Include="Expressions\Collections\MathParameterCollection.cs" />
     <Compile Include="Expressions\Mul.cs" />
     <Compile Include="Expressions\Number.cs" />
     <Compile Include="Expressions\Root.cs" />
