--- a/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
@@ -55,7 +55,9 @@
     <Compile Include="Expressions\GCD.cs" />
     <Compile Include="Expressions\Hyperbolic\HyperbolicMathExpression.cs" />
     <Compile Include="Expressions\LCM.cs" />
+    <Compile Include="Expressions\Collections\MathFunctionCollection.cs" />
     <Compile Include="Expressions\Collections\MathParameter.cs" />
+    <Compile Include="Expressions\Collections\MathParameterCollection.cs" />
     <Compile Include="Expressions\Collections\MathParameterIsReadOnlyException.cs" />
     <Compile Include="Expressions\Collections\MathParameterType.cs" />
     <Compile Include="Expressions\Matrices\Matrix.cs" />
@@ -79,7 +81,6 @@
     <Compile Include="Expressions\Bitwise\XOr.cs" />
     <Compile Include="Expressions\Bitwise\Or.cs" />
     <Compile Include="Expressions\Bitwise\Not.cs" />
-    <Compile Include="Expressions\Collections\MathFunctionCollection.cs" />
     <Compile Include="Expressions\Trigonometric\Arccos.cs" />
     <Compile Include="Expressions\Trigonometric\Arccot.cs" />
     <Compile Include="Expressions\Trigonometric\Arccsc.cs" />
@@ -87,7 +88,7 @@
     <Compile Include="Expressions\Trigonometric\Arcsin.cs" />
     <Compile Include="Expressions\Trigonometric\Arctan.cs" />
     <Compile Include="Expressions\Define.cs" />
-    <Compile Include="Expressions\BinaryMathExpression.cs" />
+    <Compile Include="Expressions\BinaryExpression.cs" />
     <Compile Include="Expressions\Hyperbolic\Arcsch.cs" />
     <Compile Include="Expressions\Hyperbolic\Arsech.cs" />
     <Compile Include="Expressions\Hyperbolic\Arcoth.cs" />
@@ -111,7 +112,6 @@
     <Compile Include="Expressions\Lg.cs" />
     <Compile Include="Expressions\Ln.cs" />
     <Compile Include="Expressions\Log.cs" />
-    <Compile Include="Expressions\Collections\MathParameterCollection.cs" />
     <Compile Include="Expressions\Mul.cs" />
     <Compile Include="Expressions\Number.cs" />
     <Compile Include="Expressions\Root.cs" />
@@ -121,7 +121,7 @@
     <Compile Include="Expressions\Sub.cs" />
     <Compile Include="Expressions\Trigonometric\Tan.cs" />
     <Compile Include="Expressions\Trigonometric\TrigonometryMathExpression.cs" />
-    <Compile Include="Expressions\UnaryMathExpression.cs" />
+    <Compile Include="Expressions\UnaryExpression.cs" />
     <Compile Include="Expressions\UnaryMinus.cs" />
     <Compile Include="Expressions\Undefine.cs" />
     <Compile Include="Expressions\UserFunction.cs" />
