--- a/xFunc.Maths/xFunc.Maths (Portable).csproj
+++ b/xFunc.Maths/xFunc.Maths (Portable).csproj
@@ -87,7 +87,7 @@
     <Compile Include="Expressions\Add.cs" />
     <Compile Include="Expressions\AngleMeasurement.cs" />
     <Compile Include="Expressions\Define.cs" />
-    <Compile Include="Expressions\BinaryMathExpression.cs" />
+    <Compile Include="Expressions\BinaryExpression.cs" />
     <Compile Include="Expressions\Bitwise\And.cs" />
     <Compile Include="Expressions\Bitwise\Not.cs" />
     <Compile Include="Expressions\Bitwise\Or.cs" />
@@ -109,17 +109,20 @@
     <Compile Include="Expressions\Hyperbolic\Sech.cs" />
     <Compile Include="Expressions\Hyperbolic\Sinh.cs" />
     <Compile Include="Expressions\Hyperbolic\Tanh.cs" />
-    <Compile Include="Expressions\IMathExpression.cs" />
+    <Compile Include="Expressions\IExpression.cs" />
     <Compile Include="Expressions\LCM.cs" />
     <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
     <Compile Include="Expressions\Lg.cs" />
     <Compile Include="Expressions\Ln.cs" />
     <Compile Include="Expressions\Log.cs" />
-    <Compile Include="Expressions\MathFunctionCollection.cs" />
-    <Compile Include="Expressions\MathParameter.cs" />
-    <Compile Include="Expressions\MathParameterIsReadOnlyException.cs" />
-    <Compile Include="Expressions\MathParameterType.cs" />
-    <Compile Include="Expressions\MathParameterCollection.cs" />
+    <Compile Include="Expressions\Collections\MathFunctionCollection.cs" />
+    <Compile Include="Expressions\Collections\MathParameter.cs" />
+    <Compile Include="Expressions\Collections\MathParameterCollection.cs" />
+    <Compile Include="Expressions\Collections\MathParameterIsReadOnlyException.cs" />
+    <Compile Include="Expressions\Collections\MathParameterType.cs" />
+    <Compile Include="Expressions\Matrices\Matrix.cs" />
+    <Compile Include="Expressions\Matrices\MatrixIsInvalidException.cs" />
+    <Compile Include="Expressions\Matrices\Vector.cs" />
     <Compile Include="Expressions\Product.cs" />
     <Compile Include="Expressions\Sum.cs" />
     <Compile Include="Expressions\Mul.cs" />
@@ -142,7 +145,7 @@
     <Compile Include="Expressions\Trigonometric\Sin.cs" />
     <Compile Include="Expressions\Trigonometric\Tan.cs" />
     <Compile Include="Expressions\Trigonometric\TrigonometryMathExpression.cs" />
-    <Compile Include="Expressions\UnaryMathExpression.cs" />
+    <Compile Include="Expressions\UnaryExpression.cs" />
     <Compile Include="Expressions\UnaryMinus.cs" />
     <Compile Include="Expressions\Undefine.cs" />
     <Compile Include="Expressions\UserFunction.cs" />
