--- a/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
@@ -53,13 +53,13 @@
     <Compile Include="Expressions\ExpressionParameters.cs" />
     <Compile Include="Expressions\Fact.cs" />
     <Compile Include="Expressions\GCD.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicExpression.cs" />
     <Compile Include="Expressions\LCM.cs" />
-    <Compile Include="Expressions\Collections\MathFunctionCollection.cs" />
-    <Compile Include="Expressions\Collections\MathParameter.cs" />
-    <Compile Include="Expressions\Collections\MathParameterCollection.cs" />
-    <Compile Include="Expressions\Collections\MathParameterIsReadOnlyException.cs" />
-    <Compile Include="Expressions\Collections\MathParameterType.cs" />
+    <Compile Include="Expressions\Collections\FunctionCollection.cs" />
+    <Compile Include="Expressions\Collections\Parameter.cs" />
+    <Compile Include="Expressions\Collections\ParameterCollection.cs" />
+    <Compile Include="Expressions\Collections\ParameterIsReadOnlyException.cs" />
+    <Compile Include="Expressions\Collections\ParameterType.cs" />
     <Compile Include="Expressions\Matrices\Matrix.cs" />
     <Compile Include="Expressions\Matrices\MatrixIsInvalidException.cs" />
     <Compile Include="Expressions\Matrices\Vector.cs" />
@@ -70,10 +70,10 @@
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="IExpressionFactory.cs" />
     <Compile Include="ISimplifier.cs" />
-    <Compile Include="MathDifferentiator.cs" />
-    <Compile Include="MathExpressionFactory.cs" />
-    <Compile Include="MathLexerException.cs" />
-    <Compile Include="MathParserException.cs" />
+    <Compile Include="Differentiator.cs" />
+    <Compile Include="ExpressionFactory.cs" />
+    <Compile Include="LexerException.cs" />
+    <Compile Include="ParserException.cs" />
     <Compile Include="Expressions\Abs.cs" />
     <Compile Include="Expressions\Add.cs" />
     <Compile Include="Expressions\AngleMeasurement.cs" />
@@ -120,7 +120,7 @@
     <Compile Include="Expressions\Sqrt.cs" />
     <Compile Include="Expressions\Sub.cs" />
     <Compile Include="Expressions\Trigonometric\Tan.cs" />
-    <Compile Include="Expressions\Trigonometric\TrigonometryMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\TrigonometricExpression.cs" />
     <Compile Include="Expressions\UnaryExpression.cs" />
     <Compile Include="Expressions\UnaryMinus.cs" />
     <Compile Include="Expressions\Undefine.cs" />
@@ -128,10 +128,10 @@
     <Compile Include="Expressions\Variable.cs" />
     <Compile Include="ILexer.cs" />
     <Compile Include="MathExtentions.cs" />
-    <Compile Include="MathLexer.cs" />
-    <Compile Include="MathParser.cs" />
-    <Compile Include="MathProcessor.cs" />
-    <Compile Include="MathSimplifier.cs" />
+    <Compile Include="Lexer.cs" />
+    <Compile Include="Parser.cs" />
+    <Compile Include="Processor.cs" />
+    <Compile Include="Simplifier.cs" />
     <Compile Include="NumeralSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.uk.Designer.cs">
