--- a/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
@@ -50,18 +50,23 @@
     <Compile Include="Expressions\DifferentParametersExpression.cs" />
     <Compile Include="Expressions\ExpressionParameters.cs" />
     <Compile Include="IExpressionFactory.cs" />
-    <Compile Include="MathExpressionFactory.cs" />
+    <Compile Include="InvalidResultException.cs" />
+    <Compile Include="ExpressionFactory.cs" />
     <Compile Include="Expressions\Fact.cs" />
     <Compile Include="Expressions\GCD.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicExpression.cs" />
     <Compile Include="Expressions\LCM.cs" />
-    <Compile Include="Expressions\Collections\MathFunctionCollection.cs" />
-    <Compile Include="Expressions\Collections\MathParameter.cs" />
-    <Compile Include="Expressions\Collections\MathParameterCollection.cs" />
-    <Compile Include="Expressions\Collections\MathParameterIsReadOnlyException.cs" />
-    <Compile Include="Expressions\Collections\MathParameterType.cs" />
+    <Compile Include="Expressions\Collections\FunctionCollection.cs" />
+    <Compile Include="Expressions\Collections\Parameter.cs" />
+    <Compile Include="Expressions\Collections\ParameterCollection.cs" />
+    <Compile Include="Expressions\Collections\ParameterIsReadOnlyException.cs" />
+    <Compile Include="Expressions\Collections\ParameterType.cs" />
+    <Compile Include="Expressions\Matrices\Determinant.cs" />
+    <Compile Include="Expressions\Matrices\Invert.cs" />
     <Compile Include="Expressions\Matrices\Matrix.cs" />
+    <Compile Include="Expressions\Matrices\MatrixExtentions.cs" />
     <Compile Include="Expressions\Matrices\MatrixIsInvalidException.cs" />
+    <Compile Include="Expressions\Matrices\Transpose.cs" />
     <Compile Include="Expressions\Matrices\Vector.cs" />
     <Compile Include="Expressions\Product.cs" />
     <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
@@ -69,9 +74,9 @@
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="EnumerableExtention.cs" />
     <Compile Include="ISimplifier.cs" />
-    <Compile Include="MathDifferentiator.cs" />
-    <Compile Include="MathLexerException.cs" />
-    <Compile Include="MathParserException.cs" />
+    <Compile Include="Differentiator.cs" />
+    <Compile Include="LexerException.cs" />
+    <Compile Include="ParserException.cs" />
     <Compile Include="Expressions\Abs.cs" />
     <Compile Include="Expressions\Add.cs" />
     <Compile Include="Expressions\AngleMeasurement.cs" />
@@ -119,7 +124,7 @@
     <Compile Include="Expressions\Sub.cs" />
     <Compile Include="Expressions\Simplify.cs" />
     <Compile Include="Expressions\Trigonometric\Tan.cs" />
-    <Compile Include="Expressions\Trigonometric\TrigonometryMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\TrigonometricExpression.cs" />
     <Compile Include="Expressions\UnaryExpression.cs" />
     <Compile Include="Expressions\UnaryMinus.cs" />
     <Compile Include="Expressions\Undefine.cs" />
@@ -127,10 +132,10 @@
     <Compile Include="Expressions\Variable.cs" />
     <Compile Include="ILexer.cs" />
     <Compile Include="MathExtentions.cs" />
-    <Compile Include="MathLexer.cs" />
-    <Compile Include="MathParser.cs" />
-    <Compile Include="MathProcessor.cs" />
-    <Compile Include="MathSimplifier.cs" />
+    <Compile Include="Lexer.cs" />
+    <Compile Include="Parser.cs" />
+    <Compile Include="Processor.cs" />
+    <Compile Include="Simplifier.cs" />
     <Compile Include="NumeralSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.uk.Designer.cs">
