--- a/xFunc.Maths/xFunc.Maths (Portable).csproj
+++ b/xFunc.Maths/xFunc.Maths (Portable).csproj
@@ -81,7 +81,8 @@
     <Compile Include="Expressions\DifferentParametersExpression.cs" />
     <Compile Include="Expressions\ExpressionParameters.cs" />
     <Compile Include="IExpressionFactory.cs" />
-    <Compile Include="MathExpressionFactory.cs" />
+    <Compile Include="InvalidResultException.cs" />
+    <Compile Include="ExpressionFactory.cs" />
     <Compile Include="Expressions\Fact.cs" />
     <Compile Include="Expressions\Abs.cs" />
     <Compile Include="Expressions\Add.cs" />
@@ -96,7 +97,7 @@
     <Compile Include="Expressions\Div.cs" />
     <Compile Include="Expressions\Exp.cs" />
     <Compile Include="Expressions\GCD.cs" />
-    <Compile Include="Expressions\Hyperbolic\HyperbolicMathExpression.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicExpression.cs" />
     <Compile Include="Expressions\Hyperbolic\Arcosh.cs" />
     <Compile Include="Expressions\Hyperbolic\Arcoth.cs" />
     <Compile Include="Expressions\Hyperbolic\Arcsch.cs" />
@@ -115,13 +116,17 @@
     <Compile Include="Expressions\Lg.cs" />
     <Compile Include="Expressions\Ln.cs" />
     <Compile Include="Expressions\Log.cs" />
-    <Compile Include="Expressions\Collections\MathFunctionCollection.cs" />
-    <Compile Include="Expressions\Collections\MathParameter.cs" />
-    <Compile Include="Expressions\Collections\MathParameterCollection.cs" />
-    <Compile Include="Expressions\Collections\MathParameterIsReadOnlyException.cs" />
-    <Compile Include="Expressions\Collections\MathParameterType.cs" />
+    <Compile Include="Expressions\Collections\FunctionCollection.cs" />
+    <Compile Include="Expressions\Collections\Parameter.cs" />
+    <Compile Include="Expressions\Collections\ParameterCollection.cs" />
+    <Compile Include="Expressions\Collections\ParameterIsReadOnlyException.cs" />
+    <Compile Include="Expressions\Collections\ParameterType.cs" />
+    <Compile Include="Expressions\Matrices\Determinant.cs" />
+    <Compile Include="Expressions\Matrices\Invert.cs" />
     <Compile Include="Expressions\Matrices\Matrix.cs" />
+    <Compile Include="Expressions\Matrices\MatrixExtentions.cs" />
     <Compile Include="Expressions\Matrices\MatrixIsInvalidException.cs" />
+    <Compile Include="Expressions\Matrices\Transpose.cs" />
     <Compile Include="Expressions\Matrices\Vector.cs" />
     <Compile Include="Expressions\Product.cs" />
     <Compile Include="Expressions\Sum.cs" />
@@ -144,7 +149,7 @@
     <Compile Include="Expressions\Trigonometric\Sec.cs" />
     <Compile Include="Expressions\Trigonometric\Sin.cs" />
     <Compile Include="Expressions\Trigonometric\Tan.cs" />
-    <Compile Include="Expressions\Trigonometric\TrigonometryMathExpression.cs" />
+    <Compile Include="Expressions\Trigonometric\TrigonometricExpression.cs" />
     <Compile Include="Expressions\UnaryExpression.cs" />
     <Compile Include="Expressions\UnaryMinus.cs" />
     <Compile Include="Expressions\Undefine.cs" />
@@ -153,14 +158,14 @@
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="ILexer.cs" />
     <Compile Include="ISimplifier.cs" />
-    <Compile Include="MathDifferentiator.cs" />
+    <Compile Include="Differentiator.cs" />
     <Compile Include="MathExtentions.cs" />
-    <Compile Include="MathLexer.cs" />
-    <Compile Include="MathLexerException.cs" />
-    <Compile Include="MathParser.cs" />
-    <Compile Include="MathParserException.cs" />
-    <Compile Include="MathProcessor.cs" />
-    <Compile Include="MathSimplifier.cs" />
+    <Compile Include="Lexer.cs" />
+    <Compile Include="LexerException.cs" />
+    <Compile Include="Parser.cs" />
+    <Compile Include="ParserException.cs" />
+    <Compile Include="Processor.cs" />
+    <Compile Include="Simplifier.cs" />
     <Compile Include="NumeralSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.uk.Designer.cs">
