--- a/xFunc/Properties/Settings.settings
+++ b/xFunc/Properties/Settings.settings
@@ -98,5 +98,8 @@
     <Setting Name="RememberBaseAndAngle" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="MatrixExpanded" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
