--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -103,6 +103,9 @@
             <setting name="RememberBaseAndAngle" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="MatrixExpanded" serializeAs="String">
+                <value>False</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
