--- a/xFunc.Test/xFunc.Tests (.Net 4.5.1).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 4.5.1).csproj
@@ -106,6 +106,13 @@
     <Compile Include="Expressions\Maths\FactTest.cs" />
     <Compile Include="Expressions\Maths\BinaryTest.cs" />
     <Compile Include="Expressions\Maths\UnaryTest.cs" />
+    <Compile Include="Expressions\Maths\SumTest.cs" />
+    <Compile Include="Expressions\Maths\ProductTest.cs" />
+    <Compile Include="Expressions\Maths\Matrices\MatrixTest.cs" />
+    <Compile Include="Expressions\Maths\Matrices\VectorTest.cs" />
+    <Compile Include="Expressions\Maths\DelegateExpressionTest.cs" />
+    <Compile Include="Expressions\Maths\RoundTest.cs" />
+    <Compile Include="Expressions\Maths\UserFunctionTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathLexerMock.cs" />
     <Compile Include="MathParserTest.cs" />
