--- a/xFunc.Test/xFunc.Tests (.Net 3.5).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 3.5).csproj
@@ -109,6 +109,8 @@
     <Compile Include="Expressions\Maths\Matrices\VectorTest.cs" />
     <Compile Include="Expressions\Maths\DelegateExpressionTest.cs" />
     <Compile Include="Expressions\Maths\RoundTest.cs" />
+    <Compile Include="Expressions\Maths\FloorTest.cs" />
+    <Compile Include="Expressions\Maths\CeilTest.cs" />
     <Compile Include="Expressions\Maths\UserFunctionTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathLexerMock.cs" />
