--- a/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 4.0).csproj
@@ -71,6 +71,17 @@
     <Compile Include="Expressions\Matrices\Transpose.cs" />
     <Compile Include="Expressions\Matrices\Vector.cs" />
     <Compile Include="Expressions\Product.cs" />
+    <Compile Include="Expressions\Programming\And.cs" />
+    <Compile Include="Expressions\Programming\Equal.cs" />
+    <Compile Include="Expressions\Programming\For.cs" />
+    <Compile Include="Expressions\Programming\GreaterOrEqual.cs" />
+    <Compile Include="Expressions\Programming\GreaterThen.cs" />
+    <Compile Include="Expressions\Programming\If.cs" />
+    <Compile Include="Expressions\Programming\LessOrEqual.cs" />
+    <Compile Include="Expressions\Programming\LessThen.cs" />
+    <Compile Include="Expressions\Programming\NotEqual.cs" />
+    <Compile Include="Expressions\Programming\Or.cs" />
+    <Compile Include="Expressions\Programming\While.cs" />
     <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
     <Compile Include="Expressions\Round.cs" />
     <Compile Include="Expressions\Simplify.cs" />
