Added tests for and/or.

--- a/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 4.0).csproj
@@ -69,6 +69,8 @@
     <Compile Include="Expressions\Maths\Programming\GreaterTest.cs" />
     <Compile Include="Expressions\Maths\Programming\LessOrEqualTest.cs" />
     <Compile Include="Expressions\Maths\Programming\GreaterOrEqualTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\AndTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\OrTest.cs" />
     <Compile Include="Expressions\Maths\Programming\WhileTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArccosTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArcsinTest.cs" />
