--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -106,6 +106,9 @@
             <setting name="MatrixExpanded" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ProgExpanded" serializeAs="String">
+                <value>False</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
