Fixed project files.

--- a/xFunc.Maths/xFunc.Maths (.Net 3.5).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.5).csproj
@@ -74,6 +74,18 @@
     <Compile Include="Expressions\Matrices\Transpose.cs" />
     <Compile Include="Expressions\Matrices\Vector.cs" />
     <Compile Include="Expressions\Product.cs" />
+    <Compile Include="Expressions\Programming\And.cs" />
+    <Compile Include="Expressions\Programming\Bool.cs" />
+    <Compile Include="Expressions\Programming\Equal.cs" />
+    <Compile Include="Expressions\Programming\For.cs" />
+    <Compile Include="Expressions\Programming\GreaterOrEqual.cs" />
+    <Compile Include="Expressions\Programming\GreaterThan.cs" />
+    <Compile Include="Expressions\Programming\If.cs" />
+    <Compile Include="Expressions\Programming\LessOrEqual.cs" />
+    <Compile Include="Expressions\Programming\LessThan.cs" />
+    <Compile Include="Expressions\Programming\NotEqual.cs" />
+    <Compile Include="Expressions\Programming\Or.cs" />
+    <Compile Include="Expressions\Programming\While.cs" />
     <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
     <Compile Include="Expressions\Round.cs" />
     <Compile Include="Expressions\Simplify.cs" />
