--- a/xFunc.Test/xFunc.Tests (.Net 2.0).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 2.0).csproj
@@ -62,6 +62,15 @@
     <Compile Include="Expressions\Maths\Bitwise\OrTest.cs" />
     <Compile Include="Expressions\Maths\Bitwise\NotTest.cs" />
     <Compile Include="Expressions\Maths\Bitwise\AndTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\ForTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\IfTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\LessThanTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\GreaterTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\LessOrEqualTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\GreaterOrEqualTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\AndTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\OrTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\WhileTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArccosTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArcsinTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArctanTest.cs" />
