--- a/xFunc.Test/xFunc.Tests (.Net 3.5).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 3.5).csproj
@@ -70,6 +70,8 @@
     <Compile Include="Expressions\Maths\Programming\GreaterOrEqualTest.cs" />
     <Compile Include="Expressions\Maths\Programming\AndTest.cs" />
     <Compile Include="Expressions\Maths\Programming\OrTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\IncTest.cs" />
+    <Compile Include="Expressions\Maths\Programming\DecTest.cs" />
     <Compile Include="Expressions\Maths\Programming\WhileTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArccosTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\ArcsinTest.cs" />
