--- a/xFunc.Test/xFunc.Tests (.Net 4.5.1).csproj
+++ b/xFunc.Test/xFunc.Tests (.Net 4.5.1).csproj
@@ -59,8 +59,8 @@
     <Compile Include="Expressions\Logics\OrTest.cs" />
     <Compile Include="Expressions\Logics\UndefineTest.cs" />
     <Compile Include="Expressions\Logics\XOrTest.cs" />
-    <Compile Include="Expressions\Maths\AbsoluteTest.cs" />
-    <Compile Include="Expressions\Maths\AdditionTest.cs" />
+    <Compile Include="Expressions\Maths\AbsTest.cs" />
+    <Compile Include="Expressions\Maths\AddTest.cs" />
     <Compile Include="Expressions\Maths\Bitwise\XOrTest.cs" />
     <Compile Include="Expressions\Maths\Bitwise\OrTest.cs" />
     <Compile Include="Expressions\Maths\Bitwise\NotTest.cs" />
@@ -99,16 +99,16 @@
     <Compile Include="Expressions\Maths\Trigonometric\TangentTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\SineTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\CosineTest.cs" />
-    <Compile Include="Expressions\Maths\DivisionTest.cs" />
-    <Compile Include="Expressions\Maths\ExponentialTest.cs" />
-    <Compile Include="Expressions\Maths\ExponentiationTest.cs" />
+    <Compile Include="Expressions\Maths\DivTest.cs" />
+    <Compile Include="Expressions\Maths\ExpTest.cs" />
+    <Compile Include="Expressions\Maths\PowTest.cs" />
     <Compile Include="Expressions\Maths\LgTest.cs" />
     <Compile Include="Expressions\Maths\LnTest.cs" />
     <Compile Include="Expressions\Maths\LogTest.cs" />
-    <Compile Include="Expressions\Maths\MultiplicationTest.cs" />
+    <Compile Include="Expressions\Maths\MulTest.cs" />
     <Compile Include="Expressions\Maths\RootTest.cs" />
     <Compile Include="Expressions\Maths\SqrtTest.cs" />
-    <Compile Include="Expressions\Maths\SubtractionTest.cs" />
+    <Compile Include="Expressions\Maths\SubTest.cs" />
     <Compile Include="Expressions\Maths\DefineTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\SecantTest.cs" />
     <Compile Include="Expressions\Maths\Trigonometric\CosecantTest.cs" />
