--- a/xFunc.UnitConverters/xFunc.UnitConverters (.Net 4.0).csproj
+++ b/xFunc.UnitConverters/xFunc.UnitConverters (.Net 4.0).csproj
@@ -46,6 +46,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemperatureConverter.cs" />
     <Compile Include="TemperatureUnits.cs" />
+    <Compile Include="TimeConverter.cs" />
+    <Compile Include="TimeUnits.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
